Add content in Welcome page

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -23,7 +23,7 @@
     <nav>
       <!-- Nav Items -->
       <ul>
-        <li><a href="#" aria-label="Product">Product</a></li>
+        <li><a routerLink="/content" aria-label="Product">Product</a></li>
         <li><a href="#" aria-label="Pricing">Pricing</a></li>
         <li><a href="#" aria-label="Marketplace">Marketplace</a></li>
         <li><a href="#" aria-label="Customers">Customers</a></li>
